# my-gym-journal

./: .gitignore  README.md  manage.py  pyproject.toml
contrib/: env-sample
my-gym-journal/: asgi.py  settings.py  urls.py  wsgi.py
my-gym-journal/base/: apps.py
